<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_main"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/white"
        android:gravity="fill_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logoHeader"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="the logo"
            app:srcCompat="@drawable/logo" />

        <LinearLayout
            android:layout_width="219dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Space
                android:layout_width="169dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center_horizontal"
                android:text="@string/search"
                android:textAlignment="center"
                android:textColor="@color/blue_main"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="end"
                android:text="@string/profile"
                android:textAlignment="gravity"
                android:textColor="@color/blue_main"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="624dp"
        android:orientation="vertical"
        android:padding="20dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foregroundGravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/titleChangeInformation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Change Information"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editTextFirstName"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/first_name"
                        android:inputType="text" />

                    <EditText
                        android:id="@+id/editTextLastName"
                        android:layout_width="wrap_content"
                        android:layout_height="56dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/last_name"
                        android:inputType="text" />
                </LinearLayout>

                <EditText
                    android:id="@+id/editTextEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/editTextConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:ems="10"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/editTextHomeAddress"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:ems="10"
                    android:hint="@string/home_address"
                    android:inputType="text" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editTextCity"
                        android:layout_width="wrap_content"
                        android:layout_height="55dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/city"
                        android:inputType="text" />

                    <EditText
                        android:id="@+id/editTextPostalCode"
                        android:layout_width="150dp"
                        android:layout_height="55dp"
                        android:ems="10"
                        android:hint="@string/zip_code"
                        android:inputType="text" />
                </LinearLayout>

                <EditText
                    android:id="@+id/editTextPhone"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:ems="10"
                    android:hint="@string/phone"
                    android:inputType="text" />

                <Button
                    android:id="@+id/buttonConfirmInfoChange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/blue_main"
                    android:text="@string/confirm" />

                <Button
                    android:id="@+id/buttonConfirmAccountDeletion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/red_main"
                    android:text="@string/delete_account" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/white"
        android:gravity="fill_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="219dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logoFooter"
                android:layout_width="89dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/logo" />

            <Space
                android:layout_width="169dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/copyrightNotice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/copyright_notice"
                android:textColor="@color/blue_main" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
